--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -145,7 +145,20 @@
 /* For devices with width up to 412px (e.g., most Android devices) */
 @media screen and (max-width: 412px) {
   .dashboard-container {
-    width: 100%;
+    width: 45%;
+    height: 40%;
+    top: 65%;
+    display: flexbox;
+    justify-content: center;
+    margin-left: -25px;
+  }
+  .left-image {
+    left: 60px;
+  }
+  
+  .right-image {
+    left: 150px;
+    z-index: 1;
   }
 
   .li-1 {
@@ -165,14 +178,55 @@
     margin-left: auto;
     margin-right: auto;
   }
+  .center-img {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  position: relative;
+  top: 150px;
+  left: -10px;
 }
 
 /* For devices with width up to 390px (e.g., most iOS devices) */
 @media screen and (max-width: 390px) {
   .dashboard-container {
     width: 100%;
+    height: 40%;
+    top: 65%;
+    display: flexbox;
+    justify-content: center;
+    margin-left: -25px;
+    
   }
-
+  .center-img {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+  position: relative;
+  top: 150px;
+  left: -10px;
+    height: 70px;
+  
+  }
+  
+  
+  .center-img1 {
+    border-radius: 60px;
+  }
+  .left-image {
+    position: relative;
+    left: 120px;
+   /* border: solid red; */
+   top: 670px;
+  }
+  
+  .right-image {
+    left: 150px;
+    z-index: 1;
+    left: 180px;
+    /* border: solid red; */
+    top: 780px;
+  }
   .li-1 {
     margin-right: 0;
   }
@@ -187,7 +241,19 @@
   }
 
   .call-img {
-    margin-left: auto;
+    margin-left: 300px;
     margin-right: auto;
   }
+  .div-1 {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    width: 100%;
+    text-align: center;
+    font: normal normal normal 12px/16px Mulish;
+    color: white;
+    margin-bottom: 8px;
+    margin-left: -10px;
+  }
+}
 }
